[package]
name = "kubar-sparkles"
version = "0.1.0"
edition = "2021"

[dependencies]
twilight-model = "0.16.0"
twilight-interactions = { version = "0.16.0", default-features = false }
tower = { version = "0.5.2", features = ["util"] }
thiserror = "2.0.11"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["rt", "macros"] }
twilight-interactions = { version = "0.16.0" }
